--- a/AT_RafaelBrito_BirthdayManager/Views/People/Index.cshtml
+++ b/AT_RafaelBrito_BirthdayManager/Views/People/Index.cshtml
@@ -6,60 +6,20 @@
     List<Person> people = Model.ElementAt(1);
 }
 
+    <div>
+        <h1>Pesquisar Amigo</h1>
+        <hr />
+        <form method="get" asp-action="GetPeopleByName" asp-controller="People">
+            <input type="text" id="query" name="query" placeholder="Nome ou Sobrenome" />
+            </br>
+            </br>
+            <input class="btn btn-primary" type="submit" value="Pesquisar" />
+        </form>
+    </div>
+</br>
+</br>
 <h1>Aniversariantes</h1>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                Nome
-            </th>
-            <th>
-                Sobrenome
-            </th>
-            <th>
-                Aniversário(MM/DD)
-            </th>
-        </tr>
-    </thead>
-    <tbody>
-        @if (Model.Count() == 0)
-        {
-            <tr>
-                <td>
-                    Não há aniversariantes no dia de hoje :D
-                </td>
-            </tr>
-        }
-
-        @foreach (var item in birthdayPeople)
-        {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Firstname)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Surname)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Birthday.Month)/@Html.DisplayFor(modelItem => item.Birthday.Day)
-                </td>
-                <td>
-                    @Html.ActionLink("Editar", "Editar", new { id = item.Id })
-                    @Html.ActionLink("Detalhes", "Details", new { id = item.Id })
-                    @Html.ActionLink("Excluir", "Delete", new { id = item.Id })
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
-
-
-<h1>Dashboard</h1>
 <hr />
-<p>
-    @Html.ActionLink("Cadastrar novo", "New")
-</p>
-
 <table class="table">
     <thead>
         <tr>
@@ -78,15 +38,52 @@
         </tr>
     </thead>
     <tbody>
-        @if(Model.Count() == 0)
+        @foreach (var item in birthdayPeople)
         {
-        <tr>
-            <td>
-                Não há usuários cadastrados :D
-            </td>
-        </tr>
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Firstname)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Surname)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Birthday.Month)/@Html.DisplayFor(modelItem => item.Birthday.Day)
+                </td>
+                <td>
+                    @Html.ActionLink("Editar", "Update", new { id = item.Id })
+                    @Html.ActionLink("Detalhes", "Details", new { id = item.Id })
+                    @Html.ActionLink("Excluir", "Delete", new { id = item.Id })
+                </td>
+            </tr>
         }
-
+    </tbody>
+</table>
+</br>
+</br>
+<h1>Dashboard</h1>
+<hr />
+<p>
+    @Html.ActionLink("Cadastrar novo", "New")
+</p>
+<table class="table">
+    <thead>
+        <tr>
+            <th>
+                Nome
+            </th>
+            <th>
+                Sobrenome
+            </th>
+            <th>
+                Aniversário(MM/DD)
+            </th>
+            <th scope="col">
+                Ações
+            </th>
+        </tr>
+    </thead>
+    <tbody>
         @foreach (var item in people)
         {
             <tr>
